examples/test/testpolicy17698.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17698
  namespace: namespace64
spec:
  podSelector:
    matchLabels:
      key16: value47
      key33: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value33
          key19: value5
      podSelector:
        matchLabels:
          key22: value33
          key12: value7
